# refpack-rs

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  justfile
.config/: nextest.toml
.github/workflows/: check-and-test.yml  clippy-fmt.yml  coverage.yml  crates-publish.yml  long-running-tests.yml  main.yml
benches/: control.rs  download_corpus_bench.sh  synthetic_performance.rs
proptest-regressions/: lib.txt
proptest-regressions/data/: mod.txt
proptest-regressions/data/compression/: mod.txt
proptest-regressions/data/control/: iterator.txt  mod.txt
src/: control.rs  error.rs  format.rs  lib.rs
src/data/: compression.rs  decompression.rs  mod.rs
src/data/compression/: fast.rs  fastest.rs  match_length.rs  mod.rs  optimal.rs  prefix_search.rs
src/data/compression/prefix_search/: hash_chain.rs  hash_table.rs  mod.rs  multi_level_hash_chain.rs
src/data/control/: iterator.rs  mod.rs
src/data/control/mode/: mod.rs  reference.rs  simcity_4.rs
src/header/: mod.rs
src/header/mode/: maxis.rs  maxis2.rs  mod.rs  reference.rs  sim_ea.rs
testing_corpus/: corpus.rs  corpus_prepared.txt
testing_corpus/compressed/: xml
tests/: fuzzers.proptest-regressions  fuzzers.rs  standard.rs
