[package]
name = "refpack"
version = "1.0.2"
edition = "2021"
rust-version = "1.56"
description = "A crate providing compression/decompression for the RefPack compression format, utilized by many early 2000s EA games"
repository = "https://github.com/actioninja/refpack-rs"
readme = "README.md"
authors = ["actioninja"]
license = "MPL-2.0"
categories = ["compression", "game-development"]
keywords = ["refpack", "dbpf", "far", "ea", "qfs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.4"
paste = "1.0"
proptest = "1.0"
rand = "0.8"
test-strategy = "0.2"
refpack-sys = { git = "https://github.com/actioninja/refpack-sys.git"}

[[bench]]
name = "synthetic_performance"
harness = false
