[package]
name = "refpack"
version = "3.0.1"
edition = "2021"
rust-version = "1.66"
description = "A crate providing compression/decompression for the RefPack compression format, utilized by many early 2000s EA games"
repository = "https://github.com/actioninja/refpack-rs"
readme = "README.md"
authors = ["actioninja"]
license = "MPL-2.0"
categories = ["compression", "game-development"]
keywords = ["refpack", "dbpf", "far", "ea", "qfs"]
include = ["src/**", "benches/**", "tests/**", "Cargo.toml", "README.md", "LICENSE.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
criterion-cycles-per-byte = "0.4"
paste = "1.0"
proptest = "1.0"
rand = "0.8"
test-strategy = "0.3"
refpack-sys = { git = "https://github.com/actioninja/refpack-sys.git" }

[[bench]]
name = "synthetic_performance"
harness = false

[[bench]]
name = "control"
harness = false

[profile.release]
debug = true
