[package]
name = "refpack"
version = "5.0.0"
edition = "2024"
rust-version = "1.85"
description = "A crate providing compression/decompression for the RefPack compression format, utilized by many early 2000s EA games"
repository = "https://github.com/actioninja/refpack-rs"
readme = "README.md"
authors = ["actioninja", "chieltbest", "other contributors"]
license = "MPL-2.0"
categories = ["compression", "game-development"]
keywords = ["refpack", "dbpf", "far", "ea", "qfs"]
include = ["src/**", "benches/**/*.rs", "tests/**", "Cargo.toml", "README.md", "LICENSE.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
rand = "0.9"
test-strategy = "0.4"
refpack-sys = { git = "https://github.com/actioninja/refpack-sys.git" }
ureq = "3.1"
zip = "5.1"

[[bench]]
name = "synthetic_performance"
harness = false

[[bench]]
name = "control"
harness = false
